# fir

./: Cargo.toml  LICENSE  README.md  build.rs
.config/: config.json5
src/: action.rs  app.rs  app_context.rs  cli.rs  commands.rs  components.rs  config.rs  editor.rs  errors.rs  event.rs  filelist.rs  help_line.rs  lib.rs  main.rs  mode.rs  panel.rs  root.rs
src/app_context/: editor_context.rs  panel_context.rs  panel_item_context.rs
src/components/: editor.rs  help.rs  panel.rs  prompt.rs
src/state_management/: action.rs  mod.rs  panel_item.rs  state.rs  state_store.rs
src/ui_management/: mod.rs  ui_manager.rs
src/ui_management/components/: component.rs  mod.rs
src/ui_management/pages/: help_line.rs  mod.rs
src/ui_management/pages/editor_page/: editor_page.rs  mod.rs
src/ui_management/pages/main_page/: main_page.rs  mod.rs
src/ui_management/pages/main_page/components/: button.rs  mod.rs  panel.rs  popup.rs
