[package]
name = "fir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-log = "2.0.0"
custom_error = "1.9.2"
termion = "2.0.1"
ratatui = { version = "0.23", features = ['termion'] }
crossterm = "0.27.0"
