[package]
name = "fir"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-log = "2.0.0"
ratatui = { version = "0.23" }
crossterm = { version = "0.27.0", features = ["event-stream"] }
tui-textarea = { version = "*", features = ["ratatui-crossterm"], default-features = false }
anyhow = "1.0.75"
tokio = { version = "1.33.0", features = ["full"] }
