[package]
name = "fir"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
crossterm = { version = "0.27.0", features = ["event-stream"] }
notify = "6.1.1"
ratatui = { version = "0.26.2", features = ["all-widgets"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tui-textarea = { git = "https://github.com/gintsgints/tui-textarea.git" }
